--- a/README
+++ b/README
@@ -1,1 +1,20 @@
-TEMP README WILL UPDATE LATER.
+This is a ledger program to keep track of expenditures or budgeting, similar to ynab but foss(Free and Open-source)
+
+What works now:
+1. Can create database table
+2. Can insert row to table
+3. Can print out table
+
+To do list:
+	Soon:
+		1. save and exports to csv
+		2. data validation
+		3. Finish database queries.
+		4. discrete categories.
+		5. Multiple Banking Accounts.
+		6. Banking Balance.
+	Later:
+		1.GUI
+
+
+last updated: 12/24/2016
