--- a/README
+++ b/README
@@ -1,17 +1,20 @@
 This is a ledger program to keep track of expenditures or budgeting, similar to ynab but foss(Free and Open-source)
 
+written in python3
+
 What works now:
 1. Basic database operations
 2. Saves user profile
 To do list:
 	Soon:
-		1. data validation
-		2. Finish database queries.
-		3. discrete categories.
-		4. Multiple Banking Accounts.
-		5. Banking Balance.
+		- data validation (unique db rows)
+		- Finish database queries.
+		- predefined categories.
+		- allow user to create new categories.
+		- Multiple Banking Accounts.
+		- Banking Balance.
 	Later:
-		1.GUI
+		1.GUI(qt or gtk)
 
 
-last updated: 12/24/2016
+last updated: 1/7/2017
